# compsecfrontend/compSecFrontEnd/src/app/api/models/user-dto.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserDto {
+  id?: null | string;
+  roles?: null | Array<string>;
+  userName?: null | string;
+}
